# throttled-py

./: .pre-commit-config.yaml  CHANGELOG.rst  CHANGELOG_EN.rst  CONTRIBUTING.md  README.md  README_ZH.md  pyproject.toml
docs/source/: api.rst  conf.py
docs/source/advance_usage/: hooks.rst
docs/source/observability/: opentelemetry.rst
docs/source/quickstart/: quota-configuration.rst
examples/quickstart/: context_manager_example.py  custom_hook_example.py  decorator_example.py  function_call_example.py  global_memory_example.py  hook_example.py  memory_example.py  otel_hook_example.py  quickstart_example.py  quota_dsl_example.py  quota_example.py  redis_cluster_example.py  redis_example.py  redis_sentinel_example.py  using_algorithm_example.py  wait_retry_concurrent_example.py  wait_retry_example.py  wait_retry_function_call_example.py
examples/quickstart/async/: context_manager_example.py  custom_hook_example.py  decorator_example.py  function_call_example.py  global_memory_example.py  hook_example.py  memory_example.py  otel_hook_example.py  quickstart_example.py  quota_dsl_example.py  redis_cluster_example.py  redis_example.py  redis_sentinel_example.py  using_algorithm_example.py  wait_retry_concurrent_example.py  wait_retry_example.py  wait_retry_function_call_example.py
tests/: conftest.py  test_hook_type_validation.py  test_hooks.py  test_throttled.py  test_utils.py
tests/asyncio/: conftest.py  test_hooks.py  test_hooks_concurrent.py  test_throttled.py
tests/asyncio/benchmarks/: test_throttled.py
tests/asyncio/contrib/fastapi/: conftest.py  test_exceptions.py  test_headers.py  test_hooks.py  test_key_funcs.py  test_keys.py  test_limiter.py  test_store_backends.py
tests/asyncio/contrib/otel/: test_hook.py
tests/asyncio/rate_limiter/: test_fixed_window.py  test_gcra.py  test_leaking_bucket.py  test_sliding_window.py  test_token_bucket.py
tests/asyncio/store/: test_memory.py  test_store.py
tests/benchmarks/: test_otel_hook.py  test_throttled.py
tests/contrib/otel/: test_otel_hook.py
tests/rate_limiter/: parametrizes.py  test_base.py  test_fixed_window.py  test_gcra.py  test_leaking_bucket.py  test_quota_parser.py  test_sliding_window.py  test_token_bucket.py
tests/store/: test_memory.py  test_redis_pool.py  test_store.py
throttled/: __init__.py  constants.py  exceptions.py  hooks.py  throttled.py  types.py  utils.py
throttled/asyncio/: __init__.py  hooks.py  throttled.py
throttled/asyncio/contrib/: __init__.py
throttled/asyncio/contrib/fastapi/: __init__.py  exceptions.py  headers.py  key_funcs.py  keys.py  limiter.py  middleware.py
throttled/asyncio/contrib/otel/: __init__.py  hook.py
throttled/asyncio/rate_limiter/: __init__.py  base.py  fixed_window.py  gcra.py  leaking_bucket.py  sliding_window.py  token_bucket.py
throttled/asyncio/store/: __init__.py  base.py  memory.py  redis.py
throttled/contrib/otel/: hook.py
throttled/rate_limiter/: __init__.py  base.py  fixed_window.py  gcra.py  leaking_bucket.py  quota_parser.py  sliding_window.py  token_bucket.py
throttled/store/: __init__.py  base.py  memory.py  redis.py  redis_pool.py
